--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
-.col-orange {
-  background: rgba(255, 166, 0, 0.877);
+.col-oranred {
+  background: linear-gradient( rgba(255, 166, 0, 0.877),red);
 }
 
 .bg-tienda {
