Cambio de estilo de barra 2

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,12 +20,14 @@
 }
 
 .bg-tienda {
-  background: url('../img/Fondo_in.jpg');  
+  background: url('../img/Fondo_in.jpg');
+  background-attachment: fixed; 
 }
 
 .col-orange-faint {
   background-image: linear-gradient(#f7bd56, #fff);
   border: 1px solid #141619;
+  color: var(--bs-red);
 }
 
 .bor-das{
