--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,9 @@ i.color-tex:hover {
   color: black;
 }
 .col-oranred {
-  background-image: linear-gradient( purple,pink);
+  /*background-image: linear-gradient( purple,pink);*/
+  background: url('../img/fondotienda.jpg');
+  background-attachment: fixed;
 }
 
 .col-redoran {
