--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ i.color-tex:hover {
 }
 
 .bg-tienda {
-  background: url('../img/fondotienda.jpg');
+  background: url('../img/fondotienda.jpgh');
   background-attachment: fixed; 
 }
 
