--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,8 @@ i.color-tex:hover {
 
 .bg-tienda {
   background: url('../img/fondotienda.jpgh');
-  background-attachment: scroll; 
+  background-attachment: scroll;
+  background-repeat: no-repeat;
 }
 
 .col-orange-faint {
