correccion imagen header

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ i.color-tex:hover {
 }
 
 .bg-tienda {
-  background: url('../img/fondotienda.jpgh');
+  background: url('../img/fondotienda.jpg');
   background-attachment: scroll;
   background-repeat: no-repeat;
 }
