--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ i.color-tex:hover {
 
 .bg-tienda {
   background: url('../img/fondotienda.jpg');
-  background-attachment: scroll;
+  background-attachment: fixed;
   background-repeat: no-repeat;
   width: 100%;
 }
