--- a/css/styles_.scss
+++ b/css/styles_.scss
@@ -27,7 +27,7 @@
 
 /*Include*/
 body {    
-    background-image: linear-gradient(to right, deeppink, white);
+    background-image: linear-gradient(to right, gold, white);
     section {
         font-size: $letTex;
         @include letra;
